--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Animated United States map made with Raphael</title>
+  <title>Us Electoral Map</title>
 </head>
 
 <body>
@@ -15,11 +15,11 @@
 
   <script src="static/raphael.min.js"></script>
   <script src="static/us-map-svg.js"></script>
-  <script src="static/draw.js"></script>
+
 
   <script>
     window.onload = function () {
-      var R = Raphael("container", 1000, 900),
+      var R = Raphael("container", 10000, 10000),
         attrB = {
           "fill": "#0000FF",
           "stroke": "#fff",
@@ -64,6 +64,7 @@
 
     };
   </script>
+
 </body>
 
 </html>
