--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,4 @@
-div.container{
-    width: 100%;  
-    height: 360px;
-    background-color: rgb(96, 202, 235);
-    margin: 0 auto; 
-}
+.container {
+    max-width: 1000px;
+    margin: auto;
+  }
