--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>Us Electoral Map</title>
+
+  <script src = "static/js/raphael.min.js"></script>
+  <script src = "static/js/us-map-svg.js"></script>
+
 </head>
 
 <body>
@@ -13,8 +17,6 @@
   <div id="container"></div>
   <!-- /container -->
 
-  <script src="static/raphael.min.js"></script>
-  <script src="static/us-map-svg.js"></script>
 
 
   <script>
